examples/passing/RedefinedFixity/M2.purs
module M2 where

import Prelude ()

import M1
