examples/failing/ImportExplicit2.purs
-- @shouldFailWith UnknownImportDataConstructor
module Main where

import M1 (X(Z, Q))
